tests/invalid/Char_Invalid_1.whiley
import * from whiley.lang.*

char f(char c):
    return c + 1
